--- a/spot.cfg
+++ b/spot.cfg
@@ -1,5 +1,5 @@
 [SPOT]
-log_file_location = /Users/marius/Documents/PyCharm/spot/log
+log_file_location = /opt/spot/log
 sleep_timer_sec = 80
 max_time_not_seen = 2
 
