--- a/spot.cfg
+++ b/spot.cfg
@@ -1,6 +1,6 @@
 [SPOT]
 log_file_location = /opt/spot/log
-sleep_timer_sec = 60
+sleep_timer_sec = 40
 max_time_not_seen = 2
 
 [CLIENTS]
@@ -8,4 +8,7 @@ log_file_locations_clients = /opt/spot/log
 
 [CCU]
 ip_ccu = 192.168.178.220
+
+[PIFACECAD]
+pifacecad_support = false
 
