checking if the IP changed

--- a/spot.cfg
+++ b/spot.cfg
@@ -1,14 +1,14 @@
 [SPOT]
 log_file_location = /opt/spot/log
-sleep_timer_sec = 40
+sleep_timer_sec = 20
 max_time_not_seen = 2
 
 [CLIENTS]
 log_file_locations_clients = /opt/spot/log
 
 [CCU]
-ip_ccu = 192.168.178.220
+ip_ccu = 192.168.180.220
 
 [PIFACECAD]
-pifacecad_support = false
+pifacecad_support = true
 
