--- a/spot.cfg
+++ b/spot.cfg
@@ -7,8 +7,8 @@ max_time_not_seen = 2
 log_file_locations_clients = /opt/spot/log
 
 [CCU]
-ip_ccu = 192.168.180.220
+ip_ccu = 192.168.180.221
 
 [PIFACECAD]
-pifacecad_support = true
+pifacecad_support = false
 
