You can use a normal RGB LED to indicate presence. Connect your RGB-LED to the GPIO Ports of the Raspberry and enable this function in the config file.

--- a/spot_example.cfg
+++ b/spot_example.cfg
@@ -12,4 +12,12 @@ ip_ccu = 192.168.178.100
 [PIFACECAD]
 pifacecad_support = False
 
+[RGBLED]
+#the GPIO.setmode is set to: GPIO.BCM
+rgbled_support = False
+rgbled_red = 24
+rgbled_green = 23
+rgbled_blue = 25
+
+
 # A Config file is generate at the first run of Spot. Execute "python /opt/spot/spot.py -s" to generate it. ignore the errors
