Sensor : You can use a normal RGB LED to indicate presence. Connect your RGB-LED to the GPIO Ports of the Raspberry and enable this function in the config file.
Sensor : You can disable the Bluetooth check. Its handy if you use the sensor to just the status using PIFACECAD or RGB-LED

--- a/spot_example.cfg
+++ b/spot_example.cfg
@@ -19,5 +19,8 @@ rgbled_red = 24
 rgbled_green = 23
 rgbled_blue = 25
 
+# Sensor : You can disable the Bluetooth check. Its handy if you use the sensor to just the status using PIFACECAD or RGB-LED
+[BLUETOOTH]
+BT_SUPPORT = True
 
 # A Config file is generate at the first run of Spot. Execute "python /opt/spot/spot.py -s" to generate it. ignore the errors
